--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.18
+  firebase_core : ^1.4.0
+  google_sign_in : ^5.0.0
+  flutter_meedu: ^7.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
